tests/rosetta/out/C/bitmap-ppm-conversion-through-a-pipe.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <time.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static long long _now() {
  struct timespec ts;
  clock_gettime(CLOCK_REALTIME, &ts);
  return (long long)ts.tv_sec * 1000000000LL + ts.tv_nsec;
}
typedef struct Pixel Pixel;
typedef struct Bitmap Bitmap;

typedef struct Pixel {
  int R;
  int G;
  int B;
} Pixel;
typedef struct {
  int len;
  pixel_t *data;
} pixel_list_t;
pixel_list_t create_pixel_list(int len) {
  pixel_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(pixel_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct Bitmap {
  int cols;
  int rows;
  list_int px;
} Bitmap;
typedef struct {
  int len;
  bitmap_t *data;
} bitmap_list_t;
bitmap_list_t create_bitmap_list(int len) {
  bitmap_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(bitmap_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

pixel_t pixelFromRgb(int c) {
  int r = ((int)((((double)c) / ((double)65536)))) % 256;
  int g = ((int)((((double)c) / ((double)256)))) % 256;
  int b = c % 256;
  return (Pixel){.r = r, .g = g, .b = b};
}

int rgbFromPixel(Pixel *p) { return p->r * 65536 + p->g * 256 + p->b; }

bitmap_t NewBitmap(int x, int y) {
  list_int tmp1 = list_int_create(0);
  int data = tmp1;
  int row = 0;
  while (row < y) {
    list_int tmp2 = list_int_create(0);
    pixel_list_t r = tmp2;
    int col = 0;
    while (col < x) {
      r = 0;
      col = col + 1;
    }
    data = 0;
    row = row + 1;
  }
  return (Bitmap){.cols = x, .rows = y, .px = data};
}

int FillRgb(Bitmap *b, int c) {
  int y = 0;
  pixel_t p = pixelFromRgb(c);
  while (y < b->rows) {
    int x = 0;
    while (x < b->cols) {
      int px = b->px;
      pixel_list_t row = px.data[y];
      row.data[x] = p;
      px.data[y] = row;
      b->px = px;
      x = x + 1;
    }
    y = y + 1;
  }
}

int SetPxRgb(Bitmap *b, int x, int y, int c) {
  if (x < 0 || x >= b->cols || y < 0 || y >= b->rows) {
    return 0;
  }
  int px = b->px;
  pixel_list_t row = px.data[y];
  row.data[x] = pixelFromRgb(c);
  px.data[y] = row;
  b->px = px;
  return 1;
}

int nextRand(int seed) { return (seed * 1664525 + 1013904223) % 2147483648; }

int main() {
  bitmap_t bm = NewBitmap(400, 300);
  FillRgb(&bm, 12615744);
  int seed = _now();
  int i = 0;
  while (i < 2000) {
    seed = nextRand(seed);
    int x = seed % 400;
    seed = nextRand(seed);
    int y = seed % 300;
    SetPxRgb(&bm, x, y, 8405024);
    i = i + 1;
  }
  int x = 0;
  while (x < 400) {
    int y = 240;
    while (y < 245) {
      SetPxRgb(&bm, x, y, 8405024);
      y = y + 1;
    }
    y = 260;
    while (y < 265) {
      SetPxRgb(&bm, x, y, 8405024);
      y = y + 1;
    }
    x = x + 1;
  }
  int y = 0;
  while (y < 300) {
    int x = 80;
    while (x < 85) {
      SetPxRgb(&bm, x, y, 8405024);
      x = x + 1;
    }
    x = 95;
    while (x < 100) {
      SetPxRgb(&bm, x, y, 8405024);
      x = x + 1;
    }
    y = y + 1;
  }
}

int main() {
  main();
  return 0;
}
